// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create_role.sql > line 2 1`] = `
[
  "CREATE ROLE regress_role_super SUPERUSER",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "superuser",
                  "location": 31,
                },
              },
            ],
            "role": "regress_role_super",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 9 1`] = `
[
  "SET SESSION AUTHORIZATION regress_role_limited_admin",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 26,
                  "sval": {
                    "sval": "regress_role_limited_admin",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 17 1`] = `
[
  "CREATE ROLE regress_role_limited",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_role_limited",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 20 1`] = `
[
  "ALTER ROLE regress_role_limited SUPERUSER",
  {
    "stmts": [
      {
        "stmt": {
          "AlterRoleStmt": {
            "action": 1,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "superuser",
                  "location": 32,
                },
              },
            ],
            "role": {
              "location": 11,
              "rolename": "regress_role_limited",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 34 1`] = `
[
  "ALTER ROLE regress_replication NOREPLICATION",
  {
    "stmts": [
      {
        "stmt": {
          "AlterRoleStmt": {
            "action": 1,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": false,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "isreplication",
                  "location": 31,
                },
              },
            ],
            "role": {
              "location": 11,
              "rolename": "regress_replication",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 42 1`] = `
[
  "ALTER ROLE regress_createdb SUPERUSER",
  {
    "stmts": [
      {
        "stmt": {
          "AlterRoleStmt": {
            "action": 1,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "superuser",
                  "location": 28,
                },
              },
            ],
            "role": {
              "location": 11,
              "rolename": "regress_createdb",
              "roletype": "ROLESPEC_CSTRING",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 46 1`] = `
[
  "CREATE ROLE regress_createrole CREATEROLE NOINHERIT",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "createrole",
                  "location": 31,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": false,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "inherit",
                  "location": 42,
                },
              },
            ],
            "role": "regress_createrole",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 55 1`] = `
[
  "CREATE ROLE regress_noiseword SYSID 12345",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 12345,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "sysid",
                  "location": 30,
                },
              },
            ],
            "role": "regress_noiseword",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 58 1`] = `
[
  "CREATE ROLE regress_nosuch_super IN ROLE regress_role_super",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "RoleSpec": {
                            "location": 41,
                            "rolename": "regress_role_super",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "addroleto",
                  "location": 33,
                },
              },
            ],
            "role": "regress_nosuch_super",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 61 1`] = `
[
  "CREATE ROLE regress_nosuch_dbowner IN ROLE pg_database_owner",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "RoleSpec": {
                            "location": 43,
                            "rolename": "pg_database_owner",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "addroleto",
                  "location": 35,
                },
              },
            ],
            "role": "regress_nosuch_dbowner",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 64 1`] = `
[
  "CREATE ROLE regress_inroles ROLE
	regress_role_super, regress_createdb, regress_createrole, regress_login,
	regress_inherit, regress_connection_limit, regress_encrypted_password, regress_password_null",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "RoleSpec": {
                            "location": 34,
                            "rolename": "regress_role_super",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 54,
                            "rolename": "regress_createdb",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 72,
                            "rolename": "regress_createrole",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 92,
                            "rolename": "regress_login",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 108,
                            "rolename": "regress_inherit",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 125,
                            "rolename": "regress_connection_limit",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 151,
                            "rolename": "regress_encrypted_password",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 179,
                            "rolename": "regress_password_null",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rolemembers",
                  "location": 28,
                },
              },
            ],
            "role": "regress_inroles",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 69 1`] = `
[
  "CREATE ROLE regress_nosuch_recursive ROLE regress_nosuch_recursive",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "RoleSpec": {
                            "location": 42,
                            "rolename": "regress_nosuch_recursive",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "rolemembers",
                  "location": 37,
                },
              },
            ],
            "role": "regress_nosuch_recursive",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 72 1`] = `
[
  "CREATE ROLE regress_adminroles ADMIN
	regress_role_super, regress_createdb, regress_createrole, regress_login,
	regress_inherit, regress_connection_limit, regress_encrypted_password, regress_password_null",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "RoleSpec": {
                            "location": 38,
                            "rolename": "regress_role_super",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 58,
                            "rolename": "regress_createdb",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 76,
                            "rolename": "regress_createrole",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 96,
                            "rolename": "regress_login",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 112,
                            "rolename": "regress_inherit",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 129,
                            "rolename": "regress_connection_limit",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 155,
                            "rolename": "regress_encrypted_password",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                        {
                          "RoleSpec": {
                            "location": 183,
                            "rolename": "regress_password_null",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "adminmembers",
                  "location": 31,
                },
              },
            ],
            "role": "regress_adminroles",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 77 1`] = `
[
  "CREATE ROLE regress_nosuch_admin_recursive ADMIN regress_nosuch_admin_recursive",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "RoleSpec": {
                            "location": 49,
                            "rolename": "regress_nosuch_admin_recursive",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "adminmembers",
                  "location": 43,
                },
              },
            ],
            "role": "regress_nosuch_admin_recursive",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 84 1`] = `
[
  "CREATE ROLE regress_plainrole",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "role": "regress_plainrole",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 87 1`] = `
[
  "CREATE ROLE regress_rolecreator CREATEROLE",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "createrole",
                  "location": 32,
                },
              },
            ],
            "role": "regress_rolecreator",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 91 1`] = `
[
  "CREATE ROLE regress_hasprivs CREATEROLE LOGIN INHERIT CONNECTION LIMIT 5",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "createrole",
                  "location": 29,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "canlogin",
                  "location": 40,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "inherit",
                  "location": 46,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 5,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connectionlimit",
                  "location": 54,
                },
              },
            ],
            "role": "regress_hasprivs",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 94 1`] = `
[
  "COMMENT ON ROLE regress_hasprivs IS 'some comment'",
  {
    "stmts": [
      {
        "stmt": {
          "CommentStmt": {
            "comment": "some comment",
            "object": {
              "String": {
                "sval": "regress_hasprivs",
              },
            },
            "objtype": "OBJECT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 99 1`] = `
[
  "COMMENT ON ROLE regress_role_normal IS 'some comment'",
  {
    "stmts": [
      {
        "stmt": {
          "CommentStmt": {
            "comment": "some comment",
            "object": {
              "String": {
                "sval": "regress_role_normal",
              },
            },
            "objtype": "OBJECT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 119 1`] = `
[
  "CREATE SCHEMA regress_tenant_schema AUTHORIZATION regress_tenant",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "authrole": {
              "location": 50,
              "rolename": "regress_tenant",
              "roletype": "ROLESPEC_CSTRING",
            },
            "schemaname": "regress_tenant_schema",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 122 1`] = `
[
  "REASSIGN OWNED BY regress_tenant TO regress_createrole",
  {
    "stmts": [
      {
        "stmt": {
          "ReassignOwnedStmt": {
            "newrole": {
              "location": 36,
              "rolename": "regress_createrole",
              "roletype": "ROLESPEC_CSTRING",
            },
            "roles": [
              {
                "RoleSpec": {
                  "location": 18,
                  "rolename": "regress_tenant",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 125 1`] = `
[
  "SET createrole_self_grant = 'set, inherit'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 28,
                  "sval": {
                    "sval": "set, inherit",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "createrole_self_grant",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 142 1`] = `
[
  "REVOKE INHERIT OPTION FOR regress_tenant2 FROM regress_createrole",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_tenant2",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 47,
                  "rolename": "regress_createrole",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "opt": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": false,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "inherit",
                  "location": 7,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 147 1`] = `
[
  "GRANT regress_tenant2 TO regress_createrole WITH INHERIT TRUE, SET FALSE",
  {
    "stmts": [
      {
        "stmt": {
          "GrantRoleStmt": {
            "behavior": "DROP_RESTRICT",
            "granted_roles": [
              {
                "AccessPriv": {
                  "priv_name": "regress_tenant2",
                },
              },
            ],
            "grantee_roles": [
              {
                "RoleSpec": {
                  "location": 25,
                  "rolename": "regress_createrole",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "is_grant": true,
            "opt": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "inherit",
                  "location": 49,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": false,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "set",
                  "location": 63,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 153 1`] = `
[
  "CREATE ROLE regress_read_all_data IN ROLE pg_read_all_data",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRoleStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "RoleSpec": {
                            "location": 42,
                            "rolename": "pg_read_all_data",
                            "roletype": "ROLESPEC_CSTRING",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "addroleto",
                  "location": 34,
                },
              },
            ],
            "role": "regress_read_all_data",
            "stmt_type": "ROLESTMT_ROLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 165 1`] = `
[
  "DROP ROLE regress_tenant",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_tenant",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 180 1`] = `
[
  "REVOKE CREATE ON DATABASE regression FROM regress_createrole CASCADE",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_CASCADE",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 42,
                  "rolename": "regress_createrole",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
            "objects": [
              {
                "String": {
                  "sval": "regression",
                },
              },
            ],
            "objtype": "OBJECT_DATABASE",
            "privileges": [
              {
                "AccessPriv": {
                  "priv_name": "create",
                },
              },
            ],
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 183 1`] = `
[
  "DROP ROLE regress_replication_bypassrls",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_replication_bypassrls",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 198 1`] = `
[
  "DROP ROLE regress_role_super",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_role_super",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_role.sql > line 203 1`] = `
[
  "RESET SESSION AUTHORIZATION",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
